<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Easy2Shop</string>
    <string name="action_settings">Settings</string>
    <string name="agriculture">Agriculture</string>
    <string name="recipes">Recipes</string>
    <string name="farm_main">Agriculture</string>
    <string name="recipes_main">Recipes</string>
    <string name="south">South</string>
    <string name="north">North</string>
    <string name="mid">Middle</string>
    <string name="all_tw">All Taiwan</string>
    <string name="fruit">Fruit</string>
    <string name="userlogin">User Login</string>
    <string name="mainpage">Main</string>
    <string name="search">Search</string>
    <string name="leaderboard">Leader Board</string>
    <string name="bazaar">Bazaar</string>
    <string name="ifarm">U Farm I Farm</string>
    <string name="about">About</string>
    <string name="dashboard">Dashboard</string>
    <string name="register">Register</string>
    <string name="userregister">User Register</string>
    <string name="login">Login</string>
    <string name="name">Full Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="linktoregister">Register New Account</string>
    <string name="linktologin">Already Got Account? Login me!</string>
    <string name="verName">Version Name : </string>
    <string name="verCode">Version Code : </string>
    <string name="verNameLatest">Latest Version Name : </string>
    <string name="verCodeLatest">Latest Version Code : </string>
    <string name="setting">Settings</string>
    <string name="quit">Quit</string>
    <string name="myplants">My Plants</string>
    <string name="myrecipes">My Recipes</string>
    <string name="info">Info</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome </string>
    <string name="passwordnew">New Password</string>
    <string name="change_info">Change Info</string>
    <string name="change_season">Change Season</string>
    <string name="dismiss">Dismiss</string>
    <string name="loading">Loading...</string>
    <string name="loadingmain">Loading application View, please wait...</string>
    <string name="error">OMG</string>
    <string name="welcomeback">Welcome back, </string>
    <string name="success_info">Info Successfully Updated</string>
    <string name="empty_level">Please insert (Level)</string>
    <string name="empty_phone">Please insert (Phone)</string>
    <string name="empty_email">Please insert (Email)</string>
    <string name="empty_pass">Please insert (Password)</string>
    <string name="empty_passnew">Please insert (New Password)</string>
    <string name="empty_name">Please insert (Full Name)</string>
    <string name="error_internet">No Internet Connection</string>
    <string name="error_server">Can\'t Reach Server</string>
    <string name="error_email">Email Not Found</string>
    <string name="error_email_registered">Email Registered, Please use another email address</string>
    <string name="error_emailorpass">Incorrect Email or Password</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="r_u_sure">Are you sure ?</string>
    <string name="level">Level</string>
    <string name="userlist">User List</string>
    <string name="orderlist">Order Need Verify</string>
    <string name="price">Price</string>
    <string name="location">Location</string>
    <string name="season">Season</string>
    <string name="plantable">Plantable</string>
    <string name="unplantable">Unable to Order different season crop</string>
    <string name="select_plant">Plant Selection</string>
    <string name="dayuse">Day Use</string>
    <string name="select">Select Option</string>
    <string name="status">Status</string>
    <string name="history">History</string>
    <string name="desc">Description</string>
    <string name="rating">Rating</string>
    <string name="plant">Plant</string>
    <string name="order">Order</string>
    <string name="order_id">Order Id</string>
    <string name="phone">Phone</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="password_admin">Admin Password</string>
    <string name="explore_crops">Explore Crops</string>
    <string name="spring">Spring</string>
    <string name="summer">Summer</string>
    <string name="autumn">Autumn</string>
    <string name="winter">Winter</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="address">Address</string>
    <string name="birthday">Birthday</string>
    <string name="check_connectivity">Checking Connectivity...</string>
    <string name="connecting_server">Connecting Server...</string>
    <string name="check_identity">Checking Identity...</string>
    <string name="goto_login">Unknown User, goto login page...</string>
    <string name="age_check">Age Check</string>
    <string name="require_adult">You must aleast 18 years old</string>
    <string name="season4">All Season</string>
    <string name="downloading">Downloading...</string>
    <string name="downloaded">Data Downloaded !</string>
    <string name="logon">Already Login</string>
    <string name="pass_input">Input Password</string>
    <string name="pass_reinput">Reinput Password</string>
    <string name="unset">Unset </string>
    <string name="qty_input">Please input Quantity</string>
    <string name="quantity">Quantity</string>
    <string name="cart">Cart</string>
    <string name="cart_adding">Adding Cart Item...</string>
    <string name="cart_adding_completed">Cart Item Added !</string>
    <string name="cart_downloading">Downloading Orders...</string>
    <string name="action_failed">Action Failed !</string>
    <string name="action_success">Action Successful</string>
    <string name="action_previous_undone">Previous action haven done</string>
    <string name="total">Total:</string>
    <string name="pay">Pay</string>
    <string name="paid">Paid</string>
    <string name="pay_success">Order Placed, please check History for [Payment Details]</string>
    <string name="no_order">No Order Found</string>
    <string name="modify">Modify</string>
    <string name="delete">Delete</string>
    <string name="processing_order">You have an unverify order, please check History for details</string>
    <string name="date">Date</string>
    <string name="verify">Verify</string>
    <string name="verify_success">Verify Successful</string>
    <string name="type">Type</string>
    <string name="ready">Ready</string>
    <string name="already">Already</string>
    <string name="haven_pay">Havent Pay</string>
    <string name="haven_verify">Havent Verify</string>
    <string name="haven_paid">UnPaid</string>
    <string name="already_paid">Already Paid</string>
    <string name="pending">Pending</string>
    <string name="done">Done</string>
    <string name="undone">Undone</string>
    <string name="crop">Crop</string>
    <string name="planted">Planted</string>
    <string name="reconnect">Reconnect</string>
    <string name="noplant">You have no plantable crop, please order first</string>
    <string name="nocrop">No crop found</string>
    <string name="action">Action</string>
    <string name="ac_plant">PLANT</string>
    <string name="ac_water">WATER</string>
    <string name="ac_weed">WEED</string>
    <string name="ac_fertilize">FERTILIZE</string>
    <string name="ac_spray">SPRAY</string>
    <string name="ac_harvest">HARVEST</string>
    <string name="ac_plant_str">Plant</string>
    <string name="ac_water_str">Water</string>
    <string name="ac_weed_str">Weed</string>
    <string name="ac_fertilize_str">Fertilize</string>
    <string name="ac_spray_str">Spray</string>
    <string name="ac_harvest_str">Harvest</string>
    <string name="mature">Mature</string>
    <string name="immature">Immature</string>
    <string name="death">Death</string>
    <string name="wait_farmer">Check details at Status and wait for farmer response</string>
    <string name="actionlist">Requested Action List</string>
    <string name="ready_plant">Requested Plant List</string>
    <string name="developer">Developer</string>
    <string name="user_normal">User</string>
    <string name="user_farmer">Farmer</string>
    <string name="user_basic">Basic Admin</string>
    <string name="user_admin">Administrator</string>
    <string name="reminder1">Do you really want to leave this page ? New data will not save</string>
    <string name="developer_func">Developer Functions</string>
    <string name="require_login">Login Required, proceed to Login ?</string>
    <string name="update">Update</string>
    <string name="update_msg">New version found, download lastest version now?</string>
    <string name="unknown">Unknown</string>
    <string name="mode">Mode:</string>
    <string name="list">List</string>
    <string name="vendor_name">Vendor Name</string>
    <string name="bank">Bank</string>
    <string name="vendor_account">Bank Account</string>
    <string name="msg_fail_get_vendor">Failed to get Vendor Details</string>
    <string name="msg_board">Message Board</string>
    <string name="send">Send</string>
    
    
    <!-- Activity titles -->
    <string name="ac_name_image_list">Image List Example</string>
    <string name="ac_name_image_grid">Image Grid Example</string>
    <string name="ac_name_image_pager">Image Pager Example</string>
    <string name="ac_name_image_gallery">Image Gallery Example</string>
    <!-- Labels -->
    <string name="label_activity_examples">Activity Examples</string>
    <string name="menu_item_clear_memory_cache">Clear memory cache</string>
    <string name="menu_item_clear_disc_cache">Clear disc cache</string>
    <string name="menu_item_pause_on_scroll">Pause on scroll</string>
    <string name="menu_item_pause_on_fling">Pause on fling</string>
    <string name="button_image_list">ListView</string>
    <string name="button_image_grid">GridView</string>
    <string name="button_image_pager">ViewPager</string>
    <string name="button_image_gallery">Gallery</string>
    <!-- Content descriptions -->
    <string name="descr_image">Image</string>
</resources>