<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:focusable="false"
        android:focusableInTouchMode="false" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/season"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/rGroupUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="URL"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/rbtnSpring"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/spring" />

                <RadioButton
                    android:id="@+id/rbtnSummer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/summer" />

                <RadioButton
                    android:id="@+id/rbtnAutumn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/autumn" />

                <RadioButton
                    android:id="@+id/rbtnWinter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/winter" />
            </RadioGroup>

            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_season" />

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Custom Command"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/edtValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" />

            <Button
                android:id="@+id/btnCmd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Run" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>