<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:background="@drawable/banner7"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtDetails"
            android:layout_width="match_parent"
            android:layout_height="284dp"
            android:textSize="20dp" />

        <Button
            android:background="@drawable/banner8"
            android:id="@+id/btnList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list" />

        <Button
            android:id="@+id/btnRes_Pay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/banner8"
            android:text="@string/already_paid" />

        <Button
            android:background="@drawable/banner8"
            android:id="@+id/btnSign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verify" />
    </LinearLayout>

</RelativeLayout>